--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+ /*@import "bootstrap-sprockets";
+ @import "bootstrap";
+*/
+ body{
+   padding-top: 70px;
+   padding-bottom: 30px;
+ }
+
+ section {
+   overflow: auto;
+ }
+
+ h1{
+   text-align: center;
+   font-size: 36px;
+   font-weight: bold;
+   color: #0000ff;
+ }
+ input{
+   width: 50%;
+
+ }
+
+ textarea{
+   width: 50%;
+   height: 100px;
+   border: 2px solid #ccc;
+   background-color: #ffff99;
+
+ }
+
+ header{
+   margin-bottom:  20px;
+ }
