--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html X-Frame-Options: SAMEORIGIN>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
