devise users added

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -16,7 +16,11 @@
     </div>
   </div>
   <div class="embed-responsive embed-responsive-16by9">
-    <%= image_tag("dictionary.jpeg", alt: "Dictionary image", :size => "1000x600") %>
+    <%= image_tag("dictionary.jpeg", alt: "Dictionary image") %>
+  </div>
+  <br/>
+  <div class="embed-responsive embed-responsive-16by9">
+    <%= image_tag("diversity.jpg", alt: "Dictionary image", size: "1000x800") %>
   </div>
   </body>
 </html>
