multiple objects added

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,15 +5,16 @@
       <ul class="nav navbar-nav navbar-right">
 
         <% if creator_signed_in? %>
-          <li class="singlelink"><%= link_to "Home" %></li>
-          <li class="singlelink"><%= link_to "#" %>Saved translations</li>
-          <li class="singlelink"><%= link_to "#" %>Translate</li>
-          <li class="singlelink"><%= link_to "#" %>Profile</li>
-          <li class="singlelink"><%= link_to "#" %>Forum</li>
-          <li class="singlelink"><%= link_to "Sign out" %>destroy_creator_session_path, method: :delete</li>
+          <li class="singlelink"><%= link_to "Home", root_url %></li>
+          <li class="singlelink"><%= link_to "Saved translations", croations_path %></li>
+          <li class="singlelink"><%= link_to "Translate(creatorID)", new_createdtranslation_path %></li>
+          <li class="singlelink"><%= link_to "Translate", new_croation_path %></li>
+          <li class="singlelink"><%= link_to "Profile", profiles_path %></li>
+          <li class="singlelink"><%= link_to "Forum", contingencypage_path %></li>
+          <li class="singlelink"><%= link_to "Sign out", destroy_creator_session_path, method: :delete %></li>
         <% else %>
-          <li class="singlelink"><%= link_to "Log in" %>new_user_session_path</li>
-          <li class="singlelink"><%= link_to "Sign up" %>new_user_registration_path</li>
+          <li class="singlelink"><%= link_to "Log in", new_creator_session_path %></li>
+          <li class="singlelink"><%= link_to "Sign up", new_creator_registration_path %></li>
         <% end %>
 
       </ul>
